# auto-research-agent

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  PROVIDERS.md  SCORING_AND_SUMMARY.md
src/auto_research_agent/: __init__.py  cli.py  pipeline.py  ranker.py  summarizer.py
src/auto_research_agent/data/: seed_sources.json
src/auto_research_agent/providers/: base.py  seed.py  serper.py
src/auto_research_agent/templates/: base.md  deep_summary.md  ideas.md
tests/: test_cli.py  test_ideas.py  test_pipeline.py  test_ranking.py  test_roadmap.py  test_seed_provider.py  test_serper_provider.py  test_summarizer.py  test_templates.py
